@@ -22,7 +22,7 @@ CONF_DIR=./config
 LIB_DIR=./lib
 LIB_JARS=`ls $LIB_DIR|grep .jar|awk '{print "'$LIB_DIR'/"$0}'|tr "\n" ":"`
 JAVA_OPTS=" -Djava.net.preferIPv4Stack=true -Dfile.encoding=utf-8 -Dlogging.config=$CONF_DIR/logback-spring.xml"
-JAVA_MEM_OPTS=" -server -Xms2g -Xmx2g -XX:PermSize=1g -XX:SurvivorRatio=2 -XX:+UseParallelGC "
+JAVA_MEM_OPTS=" -server -Xms2g -Xmx2g -XX:SurvivorRatio=2 -XX:+UseParallelGC "
 
 #START_CMD=$BIN_DIR/$BIN_FILE
 START_CMD="java $JAVA_OPTS $JAVA_MEM_OPTS -classpath $CONF_DIR:$LIB_JARS $MAIN_CLASS"
